Fixed CSS for userMenu__layout, z-index

--- a/src/views/RootLayout.css
+++ b/src/views/RootLayout.css
@@ -150,7 +150,8 @@ button:focus {outline:0;}
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 /* UserMenu end */
 
